--- a/backend/amperik-api/package.json
+++ b/backend/amperik-api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.7.0",
